# newspaper-ocr

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/newspaper_ocr/: __init__.py  cli.py  layout_processor.py  models.py  pipeline.py  registry.py  spell_checker.py  text_cleaner.py
src/newspaper_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/newspaper_ocr/detectors/: __init__.py  as_yolo.py  base.py  paddlex.py
src/newspaper_ocr/formatters/: __init__.py  base.py  hocr.py  json_fmt.py  text.py
src/newspaper_ocr/recognizers/: __init__.py  base.py  effocr.py  glm_ocr.py  kraken.py  lightonocr.py  tesseract.py  tesserocr_backend.py  trocr.py
src/newspaper_ocr/tessdata/: news_combo_fast.traineddata
tests/: bench_tesseract.py  test_cli.py  test_layout_processor.py  test_models.py  test_pipeline.py  test_pipeline_factory.py  test_registry.py  test_spell_checker.py  test_text_cleaner.py
tests/test_detectors/: test_as_yolo.py  test_paddlex.py
tests/test_formatters/: test_hocr.py  test_json.py  test_text.py
tests/test_recognizers/: test_effocr.py  test_glm_ocr.py  test_tesseract.py  test_tesserocr.py
