[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newspaper-ocr"
version = "0.4.0"
description = "Modular OCR pipeline for historical newspaper scans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Neal Caren", email = "neal.caren@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "torch>=2.0",
    "torchvision>=0.15",
    "click>=8.0",
    "huggingface-hub>=0.20",
]

[project.urls]
Homepage = "https://github.com/nealcaren/newspaper-ocr"
Repository = "https://github.com/nealcaren/newspaper-ocr"
Issues = "https://github.com/nealcaren/newspaper-ocr/issues"

[project.optional-dependencies]
tesseract = []
paddlex = ["paddlepaddle", "paddlex"]
glm-ocr = ["transformers>=5.1", "torch"]
kraken = ["kraken>=5.0", "huggingface-hub>=0.20"]
lightonocr = ["transformers>=4.50", "torch"]
all = ["newspaper-ocr[tesseract,paddlex,glm-ocr,kraken,lightonocr]"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
newspaper-ocr = "newspaper_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
newspaper_ocr = ["tessdata/*.traineddata"]
